build/kite/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kite
  labels:
    app.kubernetes.io/name: kite
    kite.anacnu.com/managed-by: kite-install
