build/kite/host-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kite-host-agent
  namespace: kite
  labels:
    app: kite-host-agent
spec:
  selector:
    matchLabels:
      app: kite-host-agent
  template:
    metadata:
      labels:
        app: kite-host-agent
    spec:
      serviceAccountName: kite-control-plane
      hostPID: true
      containers:
        - name: kite-host-agent
          image: anacnu.com/kite-host-agent:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            runAsUser: 0
          volumeMounts:
            - name: host-var-lib-kite
              mountPath: /host/var/lib/kite
            - name: host-home
              mountPath: /host/home
      volumes:
        - name: host-var-lib-kite
          hostPath:
            path: /var/lib/kite
            type: DirectoryOrCreate
        - name: host-home
          hostPath:
            path: /home
            type: Directory
