build/kite/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kite-api
  namespace: kite
  labels:
    app: kite-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kite-api
  template:
    metadata:
      labels:
        app: kite-api
    spec:
      serviceAccountName: kite-control-plane
      containers:
        - name: kite-api
          image: anacnu.com/kite-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: kite-api
  namespace: kite
spec:
  type: ClusterIP
  selector:
    app: kite-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
